--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.gwtbootstrap3</groupId>
     <artifactId>gwtbootstrap3-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.8-SNAPSHOT</version>
+    <version>0.8-gwt-2.5.1</version>
     <name>GwtBootstrap3 Parent</name>
 
     <parent>
@@ -62,7 +62,7 @@
 
     <properties>
         <source.version>1.6</source.version>
-        <gwt.version>2.6.0</gwt.version>
+        <gwt.version>2.5.1</gwt.version>
     </properties>
 
     <dependencies>
